[package]
name = "dqwm"
version = "0.1.0"
edition = "2024"

[lib]
name = "dqwm"
path = "src/lib.rs"
crate-type = ["lib","cdylib"]

[[bin]]
name = "dqwm_desktop"
path = "src/main.rs"


[dependencies]
bevy = { version = "0.17.2", features = [
    "bevy_ui",       #  UI
    "default_font",   #  默认字体
] }
bevy-inspector-egui = "0.35"

[features]
android = ["bevy/android-game-activity"]
desktop = []

[profile.release]
opt-level = "z"       # ③ 最高优化 
lto = "thin"          # ① 链接秒级
codegen-units = 16    # ② 并行生成
strip = true          # 自动 strip 符号表（Rust 1.77+）

