[package]
name = "dqwm"
version = "0.1.0"
edition = "2024"

[lib]
name = "dqwm"
path = "src/lib.rs"
crate-type = ["lib","cdylib"]


[[bin]]
name = "dqwm_desktop"
path = "src/main.rs"
required-features = ["desktop"]

[dependencies]
eframe = { version = "0.33", features = [
    "glow", # 使用 glow 作为渲染后端（OpenGL 的 Rust 封装）
    
] }
egui = { version = "0.33", features = [   
     "default_fonts", # 默认字体
    # "callstack", # 显示调用栈
] }
egui_extras = "0.33.0"
log = "0.4.28"
env_logger = "0.11.8"

#[cfg(target_os = "android")]
android_logger = "0.15.1"
#[cfg(target_os = "android")]
winit = "0.30.12"


[features]
android = ["eframe/android-game-activity"]
desktop = []

[profile.release]
opt-level = "z"       # ③ 最高优化 
lto = "thin"          # ① 链接秒级
codegen-units = 16    # ② 并行生成
strip = true          # 自动 strip 符号表（Rust 1.77+）
